# cuddly-lamp

./: Cargo.toml  Dockerfile  LICENSE.md  QUICK_START.md  README.md  docker-compose.yml
docs/: GRPC_TESTING.md
examples/: test_grpc.md
rpc/: Cargo.toml  build.rs
rpc/proto/chat/: chat.proto
rpc/src/: lib.rs
scripts/: install_grpcui.bat  install_grpcui.ps1  start_grpcui.bat  start_grpcui.ps1  start_server.bat
src/: client.rs  lib.rs  main.rs
src/config/: env.rs  errors.rs  mod.rs  settings.rs
src/services/: assistant.rs  base.rs  completion.rs  mod.rs
src/svc/: chat.rs
tests/: README.md  mod.rs
tests/integration/: api_tests.rs  mod.rs  server_tests.rs
tests/unit/: assistant_tests.rs  chat_tests.rs  client_tests.rs  completion_tests.rs  mod.rs
