[package]
name = "openai-grpc"
version = "0.1.0"
authors = ["Sergey Erin <serjerin322@gmail.com>"]
edition = "2024"

[dependencies]
openai-grpc-proto = { path = "./rpc"}
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
env_logger = "0.11.8"
dotenv = "0.15.0"
tonic = "0.13.1"
log = "0.4.27"
openai-api-rs = "6.0.5"
config = "0.15.11"
tokio-stream = "0.1.17"
reqwest = { version = "0.12.15", features = ["stream"] }
serde_json = "1.0.140"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "1.0.69"
